# colabfit-model-dev

./: .gitignore
examples/libtorch/add-two-scalars/: CMakeLists.txt  add-two-scalars.cpp
examples/libtorch/example-app/: CMakeLists.txt  example-app.cpp
generate-ml-models/SW-en-only-whole-config/: Si_SW_energy_optim_all_coord.py  load_training_set.py  simple_sw.cpp
generate-ml-models/SW-energy-and-forces-whole-config/: Si_SW_ONNX.py  Si_SW_energy_and_forces_whole_config.py  simple_sw.cpp
generate-ml-models/add-two-scalars/: add-two-scalars.pt  add-two-scalars.py
model/SW_pytorch/: CMakeLists.txt  SW_pytorch.cpp
model/SW_pytorch/MLModel/: CMakeLists.txt  ml_model.cpp  ml_model.hpp
